# aerialcore_simulation

./: CMakeLists.txt  README.md  package.xml
gps/: V223-224ISPD.txt  V225-226ISPD.txt  V411ISPD.txt  V412-420ISPD.txt  V430ISPD.txt  V441ISPD.txt  V455-466ISPD.txt  V461-462ISPD.txt  V463-464ISPD.txt  V465-466ISPD.txt
launch/: one_drone_ual.launch
launch/ATLAS/: simulator_ATLAS.launch  simulator_ATLAS_big.launch  simulator_ATLAS_dynamic.launch
launch/one_drone_atlas/: session.yml  world.yaml
launch/one_drone_atlas/custom_configs/: control_manager.yaml  joy_tracker.yaml
launch/one_drone_nechranice/: session.yml
launch/one_drone_pylons/: session.yml  world.yaml
launch/one_drone_pylons/custom_configs/: control_manager.yaml
models/ATLAS_ground/: model.config  model.sdf
models/ATLAS_ground_big/: model.config  model.sdf
models/ATLAS_ground_big/meshes/: ATLAS_ground_big.dae
models/ATLAS_ground_mini/: model.config  model.sdf
models/ATLAS_ground_mini/meshes/: ATLAS_ground_mini.dae
models/charging_pad_bolognini_s1/: model.config  model.sdf
models/charging_pad_bolognini_s1/meshes/: charging_pad_bolognini_s1.dae
models/grass_plane/: model.sdf
models/jeff_electrician/: jeff_electrician.dae  jeff_electrician.sdf  jeff_electrician_modular.sdf  jeff_left_arm.dae  jeff_right_arm.dae  model.config
models/jeff_electrician/trajectories/: circle_trajectory.txt  sample_trajectory.txt
models/jeff_electrician_modular/: jeff_body.dae  jeff_electrician.dae  jeff_electrician_modular.sdf  jeff_left_arm.dae  jeff_right_arm.dae  model.config
models/power_tower_danube_2towers_wires/: model.config  model.sdf
models/power_tower_danuble_2towers_wires/: model.sdf
models/refilling_station/: model.config  model.sdf
models/refilling_station/meshes/: refilling_station.dae  (+1 more)
models/sensefly_ebee/: model.config  model.sdf  px4cmd
models/standard_vtol/: standard_vtol.sdf
models/three_power_towers/: model.config  model.sdf
models/wind_turbine/: blade_notScaled.dae  blades_scaled.dae  pylon_notScaled.dae  pylon_scaled.dae  turbine_rotated.dae  turbine_rotated_scaled.dae  wind_turbine_scaled.dae
scripts/: launch_gzworld.py
src/model_plugins/: dynamic_model_plugin.cpp
src/world_plugins/: DynamicMapPlugin.cc  DynamicMapPlugin.hh  V223-224 ISPD Stozary pro vyjadrovani 2020-06-25-14-00-59.csv  dynamic_model_plugin.cpp  powerline_gazebo_plugin.cc  spawner_gazebo_plugin.cc
urdf/: three_power_towers.urdf
worlds/: ATLAS_power_lines.world  ATLAS_power_lines_big.world  ATLAS_power_lines_dynamic.world  ATLAS_power_lines_mini.world  aerial_core_autospawn.world  aerial_core_autospawn_no_human.world  aerial_core_nechranice.world  aerial_core_nechranice_justdynamicmap.world  ceps_experiments_autospawn.world  grass_plane.world  leader_follower_inspection.world  nechranice_substation.world  power_line_mock-up_autospawn.world  power_line_mock-up_mrscamp_autospawn.world  power_line_mock-up_scaled_autospawn.world  power_tower_island_prague_autospawn.world  power_towers_danube_wires_autospawn.world  power_towers_danube_wires_rescaled_autospawn.world  power_towers_danube_wires_rescaled_jeff_autospawn.world  power_towers_danuble_wires_autospawn.world  power_towers_danuble_wires_rescaled_autospawn.world  three_power_towers.world  two_towers_island_prague_autospawn.world  wind_turbine_autospawn.world  wind_turbine_use_autospawn.world
(+6 files in other folders)
